Implemented settings menu. TODO: FIX BUGS!!!